上传正则表达式

--- a/进阶/正则表达式.md
+++ b/进阶/正则表达式.md
@@ -1,17 +1,61 @@
 #### \d，\w,\s,[a-zA-Z0-9],\b,.,*,+,?,x{3},^,$分别是什么?
+**\d** 数字字符
 
+**\w** 单词字符，字母、数字下划线
 
+**\s** 空白符
 
+**[a-zA-Z0-9]** 单词字符，字母、数字下划线
+
+**\b** 单词边界
+
+**.** 除了回车符和换行符之外的所有字符
+
+**\*** 出现零次或多次（任意次）
+
+**+** 出现一次或多次（至少出现一次）
+
+**?** 出现零次或一次（最多出现一次）
+
+**x{3}** 出现3次
+
+**^** 以xxx开头
+
+**$** 	以xxx结尾
 
 
 
 #### 写一个函数trim(str)，去除字符串两边的空白字符
+```
+function trim(str){
+    var regExp = /^\s*|\s*$/g    
+    // ^以...开头 \s空白字符 *出现任意次 |并且  $以...结尾 /g全局作用域
+    return str.replace(regExp,'');
+}
+trim('     hello world    ')  //hello world
+```
 
 
 #### 写一个函数isEmail(str)，判断用户输入的是不是邮箱
+```
+function isEmail(str) {
+    var regExp = /[0-9a-z_A-Z]*@[0-9a-z_A-Z]{2,5}(.com)$/
+    var flag= regExp.test(str)
+    return flag
+}
+console.log(isEmail('987849393@163.com'))
+console.log(isEmail('15846304414.com'))
+```
 
 
 #### 写一个函数isPhoneNum(str)，判断用户输入的是不是手机号
+```
+function isPhoneNum(str) {
+    var regExp = /^1[0-9]{10}/
+    var flag= regExp.test(str)
+    return flag
+}
+```
 
 
 #### 写一个函数isValidUsername(str)，判断用户输入的是不是合法的用户名（长度6-20个字符，只能包括字母、数字、下划线）
