修改正则表达式，上传dom操作

--- a/进阶/正则表达式.md
+++ b/进阶/正则表达式.md
@@ -59,14 +59,27 @@ function isPhoneNum(str) {
 
 
 #### 写一个函数isValidUsername(str)，判断用户输入的是不是合法的用户名（长度6-20个字符，只能包括字母、数字、下划线）
-
+```
+function isValidUsername(str){
+    var regExp = /\w{6,20}/g
+    return regExp.test(str)
+}
+console.log(isValidUsername('a15846_304414'))
+console.log(isValidUsername('54545,54564'))
+console.log(isValidUsername('sd<>d'))
+```
 
 #### 写一个函数isValidPassword(str), 判断用户输入的是不是合法密码（长度6-20个字符，只包括大写字母、小写字母、数字、下划线，且至少至少包括两种）
-
+```
+function isValidPassword(str){
+    var regExp = /(^\d{6,20}$)|(^[A-Z]{6,20}$)|(^(a-z){6,20}$)|^_{6,20}$|\W/
+    return !regExp.test(str)
+}
+```
 
 #### 写一个正则表达式，得到如下字符串里所有的颜色
 ```
-var re = /*正则...*/
+var re = /#[0-9a-zA-Z]{6}/g
 var subj = "color: #121212; background-color: #AA00ef; width: 12px; bad-colors: f#fddee "
 console.log( subj.match(re) )  // ['#121212', '#AA00ef']
 ```
@@ -77,4 +90,13 @@ console.log( subj.match(re) )  // ['#121212', '#AA00ef']
 var str = 'hello  "hunger" , hello "world"';
 var pat =  /".*"/g;
 str.match(pat);
+```
+
+- 输出[""hunger" , hello "world""]
+- 因为默认是贪婪模式，会尽可能多匹配，所以我们要把它改成非贪婪模式，加一个？
+```
+var str = 'hello  "hunger" , hello "world"'
+console.log(str)
+var pat =  /".*?"/g
+console.log(str.match(pat))
 ```
