--- a/进阶/事件.md
+++ b/进阶/事件.md
@@ -99,25 +99,27 @@
 <button id="btn-add-start">开头添加</button>
 <button id="btn-add-end">结尾添加</button>
 <script>
-var lis = document.getElementsByTagName('li')
-for(var i=0;i<lis.length;i++){
-    lis[i].addEventListener('click',function(){
-        alert(this.innerHTML)
-    },false)
-}
 var ul = document.querySelector('.ct')
 var inputValue = document.querySelector('.ipt-add-content')
 var btnAddStart = document.getElementById('btn-add-start')
 var btnAddEnd = document.getElementById('btn-add-end')
 btnAddStart.addEventListener('click',function(){
-    var newItem = document.createElement('li')
-    newItem.innerText = inputValue.value
-    ul.insertBefore(newItem,ul.firstChild)
+    if(inputValue.value){
+        var newItem = document.createElement('li')
+        newItem.innerText = inputValue.value
+        ul.insertBefore(newItem,ul.firstChild)
+    }else{
+        alert('请添加非空内容')
+    }
 },false)
 btnAddEnd.addEventListener('click',function(){
-    var newItem = document.createElement('li')
-    newItem.innerText = inputValue.value
-    ul.appendChild(newItem)
+    if(inputValue.value){
+        var newItem = document.createElement('li')
+        newItem.innerText = inputValue.value
+        ul.appendChild(newItem)
+    }else{
+        alert('请添加非空内容')
+    }
 },false)
 </script>
 ```
