--- a/进阶/闭包.md
+++ b/进阶/闭包.md
@@ -9,7 +9,30 @@ for (var i = 0; i < 10; i ++) {
 console.log( fnArr[3]() );  //
 ```
 - 输出的结果为10
-
+- 第一种方法
+    ```
+    var fnArr = [];
+    for (var i = 0; i < 10; i ++) {
+        fnArr[i] =  function(i){
+            return function (){
+                return i
+            }        
+        }(i)
+    }
+    console.log( fnArr[3]() );  //3
+    ```
+- 第二种方法
+    ```
+    var fnArr = [];
+    for (var i = 0; i < 10; i ++) {
+        ~function (i){
+            fnArr[i] = function(){
+                return i
+            }
+        }(i)
+    }
+    console.log( fnArr[3]() );  //3
+    ```
 
 #### 2： 封装一个汽车对象，可以通过如下方式获取汽车状态
 ```
