--- a/进阶/闭包.md
+++ b/进阶/闭包.md
@@ -41,24 +41,43 @@ var Car = (function(){
    function setSpeed(s){
        speed = s
    }
-   ...
+   function getSpeed(){
+       return speed
+   }
+   function accelerate(){
+       speed+=10
+   }
+   function decelerate(){
+       speed-=10
+   }
+   function getStatus(){
+       if(speed == '0'){
+           console.log('stop')
+       }else{
+           console.log('running')
+       }
+   }
    return {
       setSpeed: setSpeed,
-      ...
+      getSpeed: getSpeed,
+      accelerate: accelerate,
+      decelerate: decelerate,
+      getStatus: getStatus
    }
+   
 })()
 Car.setSpeed(30);
-Car.getSpeed(); //30
+console.log(Car.getSpeed()) //30
 Car.accelerate();
-Car.getSpeed(); //40;
+console.log(Car.getSpeed()) //40;
 Car.decelerate();
 Car.decelerate();
-Car.getSpeed(); //20
+console.log(Car.getSpeed()) //20
 Car.getStatus(); // 'running';
 Car.decelerate(); 
 Car.decelerate();
 Car.getStatus();  //'stop';
-//Car.speed;  //error
+console.log(Car.speed)  //error   undefined
 ```
 
 ---
@@ -74,7 +93,13 @@ var a ;
 console.log(a);
 a = 3;
 console.log(a);
+```
+- 输出结果为1，3，2
+- 原因: `setTimeout`的作用是将代码推迟到指定时间执行，如果指定时间为0，即setTimeout(f,0)，那么不会立刻执行,只有将所有代码执行完毕，才会一个一个的去进行时间计算在执行setTimeout所以会先打印出1，3在打印出2
+
+
 #### 4：下面这段代码输出结果是? 为什么?
+```
 var flag = true;
 setTimeout(function(){
     flag = false;
@@ -82,32 +107,54 @@ setTimeout(function(){
 while(flag){}
 console.log(flag);
 ```
+- 什么都不输出
+- 原因和上题一样，要先执行完全部代码后在执行`setTimeout`中的代码，由于flag为true，所以程序进入死循环
 
 ---
 
 #### 5： 下面这段代码输出？如何输出delayer: 0, delayer:1...（使用闭包来实现）
 ```
 for(var i=0;i<5;i++){
-	setTimeout(function(){
-         console.log('delayer:' + i );
-	}, 0);
-	console.log(i);
+    setTimeout(function(i){
+        return function(){
+            console.log('delayer:' + i )
+        }
+    }(i), 0);
 }
 ```
 ---
 
 #### 6： 如何获取元素的真实宽高
+```
+<div id='el'></div>
+```
+```
+var el = document.getElementById('el')
+console.log(el.offsetWidth)    //获取元素的实际宽度
+console.log(el.offsetHeight)    //获取元素的实际高度
+
+```
 
 #### 7： URL 如何编码解码？为什么要编码？
+- 一般使用utf-8进行编码和解码，比如‘春’和‘节’的utf-8的编码就是"E6 98 A5"和"E8 8A 82"，因此，"%E6%98%A5%E8%8A%82"就是按照顺序，在每个字节前加上%而得到的。对于更详细的编码方式：
+    > 1）对于单字节的符号，字节的第一位设为0，后面7位为这个符号的unicode码。因此对于英语字母，UTF-8编码和ASCII码是相同的。
+
+    > 2）对于n字节的符号（n>1），第一个字节的前n位都设为1，第n+1位设为0，后面字节的前两位一律设为10。剩下的没有提及的二进制位，全部为这个符号的unicode码。
+- 在javaScript中也提供四个URL的编码/解码方法：decodeURL(),decodeURLCompoonent(),encodeURL(),encodeURLComponent()
+- 如果一样东西需要编码，说明这个东西不方便在网络中传输,对于url来说，我们发送的请求需要将数据隐藏，url中某些字符也会引起歧义
 
 #### 8： 补全如下函数，判断用户的浏览器类型
 ```
 function isAndroid(){
+    return /Android/.test(navigator.userAgent);
 }
 funcnction isIphone(){
+    return /iPhone/.test(navigator.userAgent);
 }
 function isIpad(){
+    return /iPad/.test(navigator.userAgent);
 }
 function isIOS(){
+    return /(iPad)|(iPhone)/i.test(navigator.userAgent);
 }
 ```
