修改懒加载.md和readme.md

--- a/进阶/懒加载.md
+++ b/进阶/懒加载.md
@@ -41,9 +41,8 @@
 
 
 #### 5： 实现视频中的图片懒加载效果
+[效果预览](https://a775691134.github.io/task/%E8%BF%9B%E9%98%B6/js%E8%BF%9B%E9%98%B6/%E6%87%92%E5%8A%A0%E8%BD%BD/index1.html)
 
+- 图片都是放在Github上面的，原来是从后台请求数据的，后来改回来了。
+- 图片比较大，Github比较慢
 
-
-
-
-#### 6 `<script src="https://code.jquery.com/jquery-3.2.1.min.js"integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="crossorigin="anonymous"></script>`
