上传轮播图,md

--- a/进阶/轮播图.md
+++ b/进阶/轮播图.md
@@ -16,4 +16,22 @@ imgObj={
 
 
 #### 3： 实现一个渐变轮播效果.
+[demo](https://a775691134.github.io/task/进阶/js进阶/轮播/index2.html)#### 1： 轮播的实现原理是怎样的？如果让你来实现，你会抽象出哪些函数(or接口)供使用？（比如 play()）
+```
+/*传入对象：*/
+imgObj={
+    imgUrl : [],
+    width: '',
+    height: '',
+    container: '', /*容器的元素*/
+}
+/*只需要给一个函数传入一个上述对象，就会在指定的容器内部生成轮播图*/
+/*根据指定图片的url自动生成html代码*/
+```
+
+#### 2： 实现视频中的左右滚动无限循环轮播效果
+[demo](https://a775691134.github.io/task/进阶/js进阶/轮播/index1.html)
+
+
+#### 3： 实现一个渐变轮播效果.
 [demo](https://a775691134.github.io/task/进阶/js进阶/轮播/index2.html)
