上传对象基础

--- a/进阶/轮播图.md
+++ b/进阶/轮播图.md
@@ -1,33 +1,30 @@
 #### 1： 轮播的实现原理是怎样的？如果让你来实现，你会抽象出哪些函数(or接口)供使用？（比如 play()）
-```
-/*传入对象：*/
-imgObj={
-    imgUrl : [],
-    width: '',
-    height: '',
-    container: '', /*容器的元素*/
-}
-/*只需要给一个函数传入一个上述对象，就会在指定的容器内部生成轮播图*/
-/*根据指定图片的url自动生成html代码*/
-```
+- 原理：    
+    - 外层容器设置固定宽度，设置overflow为hidden，设置相对定位
+    - 内层ul设置绝对定位，li设置浮动或行内元素，做到使li在一排显示
+    - 使用js控制ul的left做到图片轮播
+- 抽象接口
+    - playNow(count) count为数字，负数代表向后滚动，正数代表向前滚动
+    - playNext(count)  被playNow使用，向后滚动
+    - playPre(count) 被playNoew使用，向前滚动
+    - whoIsActive()  控制导航中哪个li变为和其他不一样的颜色
 
 #### 2： 实现视频中的左右滚动无限循环轮播效果
 [demo](https://a775691134.github.io/task/进阶/js进阶/轮播/index1.html)
 
 
 #### 3： 实现一个渐变轮播效果.
-[demo](https://a775691134.github.io/task/进阶/js进阶/轮播/index2.html)#### 1： 轮播的实现原理是怎样的？如果让你来实现，你会抽象出哪些函数(or接口)供使用？（比如 play()）
-```
-/*传入对象：*/
-imgObj={
-    imgUrl : [],
-    width: '',
-    height: '',
-    container: '', /*容器的元素*/
-}
-/*只需要给一个函数传入一个上述对象，就会在指定的容器内部生成轮播图*/
-/*根据指定图片的url自动生成html代码*/
-```
+[demo](https://a775691134.github.io/task/进阶/js进阶/轮播/index2.html)
+#### 1： 轮播的实现原理是怎样的？如果让你来实现，你会抽象出哪些函数(or接口)供使用？（比如 play()）
+- 原理：    
+    - 外层容器设置固定宽度，设置overflow为hidden，设置相对定位
+    - 内层ul设置绝对定位，li设置浮动或行内元素，做到使li在一排显示
+    - 使用js控制ul的left做到图片轮播
+- 抽象接口
+    - playNow(count) count为数字，负数代表向后滚动，正数代表向前滚动
+    - playNext(count)  被playNow使用，向后滚动
+    - playPre(count) 被playNoew使用，向前滚动
+    - whoIsActive()  控制导航中哪个li变为和其他不一样的颜色
 
 #### 2： 实现视频中的左右滚动无限循环轮播效果
 [demo](https://a775691134.github.io/task/进阶/js进阶/轮播/index1.html)
