修改模块化

--- a/高级/模块化.md
+++ b/高级/模块化.md
@@ -1,4 +1,5 @@
 ### 1： 为什么要使用模块化？
+- 随着前端的功能日益增加，代码越来越多，使得我们管理起代码来越来越难，模块化可以让我们更加简单的管理我们的代码。
 
 ### 2： CMD、AMD、CommonJS 规范分别指什么？有哪些应用
 - CommonJS 
@@ -7,10 +8,10 @@
 
 - AMD
     - 一个功能就是一个单独的模块，给出调用功能的借口
-    - require.js
+    - `require.js`、`curl`、`Dojo`
 
 - CMD 
-    - 
+    - 一个模块就是一个文件，用define关键字定义一个模块，这是一个函数。
     - seajs
 
 
