修改一点点生命周期,md(未完成)

--- a/React/生命周期.md
+++ b/React/生命周期.md
@@ -62,3 +62,11 @@
 - componentDidMount()
     - 尽可能多的将网络请求写在这里
     - 此方法中的设置状态将触发重新渲染。
+
+## 接下来是更新节点
+- componentWillReceiveProps()
+    - 在组件接收到新的props前被调用，
+- shouldComponentUpdate()
+- componentWillUpdate()
+- render()
+- componentDidUpdate()
