上传模块化

--- a/高级/模块化.md
+++ b/高级/模块化.md
@@ -9,15 +9,30 @@
 - AMD
     - 一个功能就是一个单独的模块，给出调用功能的借口
     - `require.js`、`curl`、`Dojo`
+    - 要先把需要的模块放进方括号的里面
+    ```javascript
+    define([
+        'Jquery',
+        'index'
+        ],function($,index){
+            //...
+        })
+    ```
 
 - CMD 
     - 一个模块就是一个文件，用define关键字定义一个模块，这是一个函数。
     - seajs
+    - 每次想要调用其他模块的时候在写到现在编写的模块中
+    ```
+    define(function(require,exports,modules){
+        var $ = require('Jquery')
+        //...
+    })
+    ```
 
 
 ### 3： 使用 requirejs 完善入门任务15，包括如下功能：
-
  1. 首屏大图为全屏轮播
  2. 有回到顶部功能
  3. 图片区使用瀑布流布局（图片高度不一），下部有加载更多按钮，点击加载更多会加载更多数据(数据在后端 mock)
- 4.  使用 r.js 打包应用
+[项目地址](https://a775691134.github.io/task/%E9%AB%98%E7%BA%A7/%E6%A8%A1%E5%9D%97%E5%8C%96/mask15/demo2.html#)
